<resources>
    <string name="app_name">CyborgCare</string>

    <string name="main_measure_title">大屏</string>
    <string name="main_monitor_title">监控</string>
    <string name="main_calender_title">数据</string>
    <string name="main_profile_title">设置</string>

    <!-- measure fragment -->
    <string name="emg_chart_title">肌&#160;电&#160;数&#160;据</string>
    <string name="rr_chart_title">呼&#160;吸&#160;数&#160;据</string>
    <string name="eeg_delta_chart_title">脑&#160;电&#160;Delta&#160;波&#160;形</string>
    <string name="eeg_theta_chart_title">脑&#160;电&#160;Theta&#160;波&#160;形</string>
    <string name="eeg_lowalpha_chart_title">脑&#160;电&#160;Lowalpha&#160;波&#160;形</string>
    <string name="eeg_highalpha_chart_title">脑&#160;电&#160;Highalpha&#160;波&#160;形</string>
    <string name="eeg_lowbeta_chart_title">脑&#160;电&#160;Lowbeta&#160;波&#160;形</string>
    <string name="eeg_highbeta_chart_title">脑&#160;电&#160;Highbeta&#160;波&#160;形</string>
    <string name="eeg_lowgamma_chart_title">脑&#160;电&#160;Lowgamma&#160;波&#160;形</string>
    <string name="eeg_midgamma_chart_title">脑&#160;电&#160;Midgamma&#160;波&#160;形</string>
    <string name="eeg_attention_chart_title">脑&#160;电&#160;专&#160;注&#160;度</string>
    <string name="eeg_mediation_chart_title">脑&#160;电&#160;冥&#160;想&#160;度</string>
    <string name="temp_chart_title">体&#160;温&#160;数&#160;据</string>

    <!-- profile -->
    <string name="profile_avatar_imageview">个人头像</string>
    <string name="profile_person_indicater">点此进入个人信息</string>
    <string name="profile_server_connection_tv">服务器连接</string>
    <string name="profile_server_connection_status">已连接</string>
    <string name="profile_blood_mode_custom">定时测量</string>
    <string name="profile_bluetooth_connection_tv">蓝牙连接</string>
    <string name="profile_bluetooth_connection_status">已连接</string>
    <string name="profile_monitor_mode_custom">自定义测量</string>
    <string name="profile_monitor_auto_speed">%1$dms/次</string>
    <string name="profile_monitor_gap_tv">传感器监控速率</string>
    <string name="profile_notify_tv">通知提醒</string>
    <string name="profile_notify_indicater">点此进入闹钟设置</string>
    <string name="profile_upload_tv">数据同步</string>
    <string name="profile_upload_indicater">点此进入数据同步设置</string>
    <string name="profile_reset_tv">清空本地缓存</string>
    <string name="profile_reset_indicater">点此进入数据重置设置</string>
    <string name="profile_title">设置</string>
    <string name="profile_login">登陆&#160;|&#160;注册</string>

    <!-- profile detail activity -->
    <string name="personal_title">个人资料</string>
    <string name="zero">0</string>
    <string name="personal_info_today_times">今日测量次数</string>
    <string name="personal_info_total_times">历史测量次数</string>
    <string name="personal_info_health_assess">综合健康评分</string>
    <string name="personal_info_uid_hint">uid</string>
    <string name="personal_info_name_hint">姓名</string>
    <string name="personal_info_sex_hint">性别</string>
    <string name="personal_info_birth_hint">生日</string>
    <string name="personal_info_age_hint">年龄</string>
    <string name="personal_info_constellation_hint">星座</string>
    <string name="personal_info_intro_hint">介绍</string>
    <string name="personal_info_email_hint">邮件地址</string>
    <string name="personal_info_location_hint">住址</string>
    <string name="personal_save">保存</string>
    <string name="personal_logout">注销账号</string>
    <string name="personal_update_profile">更新个人信息</string>
    <string name="personal_reset_message">清空本地缓存将会将本地的所有个人测量数据清空，但是服务器上的数据会保留。是否确定重置数据？</string>
    <string name="personal_sex_male">男</string>
    <string name="personal_sex_female">女</string>
    <string name="personal_sex_alien">外星人</string>
    <string name="personal_logout_tips">登出账号将会清空本地所有记录（包括临时账号的记录），该账号的云端记录没有影响。是否确定登出账号？</string>
    <string name="personal_upload_fail_message">上传失败</string>
    <string name="personal_upload_success_message">上传成功</string>
    <string name="personal_upload_ing_message">正在上传，请稍等~</string>
    <string name="personal_refresh_success_message">刷新成功~</string>
    <string name="personal_refresh_fail_message">刷新失败/(ㄒoㄒ)/~~</string>
    <string name="personal_refresh_ing_message">正在跟服务器MM索要您的最新信息，请稍候啦~</string>


    <!-- login/register dialog -->
    <string name="login_dialog_header_login">登陆</string>
    <string name="login_dialog_header_register">注册</string>
    <string name="login_dialog_name">邮箱</string>
    <string name="login_dialog_pwd">密码</string>
    <string name="login_dialog_pwd_confirm">确认密码</string>
    <string name="login_ing_message">正在登陆中，请稍后</string>
    <string name="register_ing_message">正在注册中，请稍后</string>

    <!-- alert dialog -->
    <string name="tips">提示</string>
    <string name="ok">确定</string>
    <string name="no_bt_support">你的设备不支持蓝牙</string>


    <!-- bluetooth activity -->
    <string name="search_message">搜索蓝牙设备…</string>
    <string name="title_paired_devices">已匹配</string>
    <string name="title_other_devices">其他设备</string>
    <string name="none_paired">无匹配设备</string>
    <string name="none_found">未找到</string>
    <string name="select_device">选择蓝牙设备</string>
    <string name="empty_device_name">&lt;新设备&gt;</string>
    <string name="command_hint">输入指令</string>
    <string name="button_send">发送</string>

    <string name="msg_not_connected">未连接</string>
    <string name="msg_connecting">正在连接…</string>
    <string name="msg_connected">已连接</string>

    <string name="action_bluetooth">打开/关闭</string>
    <string name="menu_clear">清除历史记录</string>
    <string name="menu_send">发送日志…</string>
    <string name="menu_settings">设置</string>
    <string name="bluetooth_title">蓝牙连接</string>

    <!-- prefence keys, no translation needed -->
    <string name="pref_commands_mode">pref_commands_mode</string>
    <string name="pref_checksum_mode">pref_checksum_mode</string>
    <string name="pref_commands_ending">pref_commands_ending</string>
    <string name="pref_log_timing">pref_log_timing</string>
    <string name="pref_log_direction">pref_log_direction</string>
    <string name="pref_need_clean">pref_need_clean</string>

    <!-- BluetoothSettingActivity -->
    <string name="log_settings_category">命令历史:</string>

    <string name="log_time">时间</string>
    <string name="log_time_summary">在log中显示时间</string>
    <string name="log_direction">日志方向</string>
    <string name="log_direction_summary">在log中显示io</string>

    <string name="commands_mode">输入模式:</string>
    <string name="checksum_mode">校验值</string>
    <string name="checksum_mode_summary">在命令中加入校验值</string>
    <string name="commands_mode_summary">选择输入模式</string>
    <string name="commands_ending_summary">选择终止符</string>

    <string name="need_clean">清除之前的命令</string>
    <string name="need_clean_summary">每当发送后清除命令</string>



</resources>
