<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_search"
        android:icon="@mipmap/ic_action_bluetooth"
        android:title="@string/action_bluetooth"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_clear"
        android:orderInCategory="100"
        android:title="@string/menu_clear"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_send"
        android:orderInCategory="100"
        android:title="@string/menu_send"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
</menu>