<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/emg_chart_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/emg_chart_title"
                android:textSize="@dimen/textSize_second_title" />


            <com.moecheng.cyborgcare.view.chart.ShadowLineChart
                android:id="@+id/emg_chart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/measure_chart_height" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/rr_chart_title"
                android:textSize="@dimen/textSize_second_title" />

            <com.moecheng.cyborgcare.view.chart.ShadowLineChart
                android:id="@+id/rr_chart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/measure_chart_height" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/eeg_chart_title"
                android:textSize="@dimen/textSize_second_title" />

            <com.moecheng.cyborgcare.view.chart.ShadowLineChart
                android:id="@+id/eeg_chart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/measure_chart_height" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/temp_chart_title"
                android:textSize="@dimen/textSize_second_title" />

            <com.moecheng.cyborgcare.view.chart.ShadowLineChart
                android:id="@+id/temp_chart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/measure_chart_height" />

        </LinearLayout>
    </LinearLayout>


</ScrollView>
